:sparkles: Fix grid gaps

--- a/frontend/resources/styles/main/partials/dashboard-team.scss
+++ b/frontend/resources/styles/main/partials/dashboard-team.scss
@@ -123,7 +123,6 @@
       display: flex;
       max-width: 324px;
       width: 324px;
-      height: 100px;
       background-color: $color-white;
       flex-direction: column;
       padding: 12px;
@@ -139,7 +138,7 @@
 
       .name {
         margin-top: 10px;
-        font-size: $fs32;
+        font-size: $fs28;
         color: $color-black;
         @include text-ellipsis;
         margin-right: 90px;
