--- a/frontend/resources/styles/main/partials/dashboard.scss
+++ b/frontend/resources/styles/main/partials/dashboard.scss
@@ -12,7 +12,7 @@
   border-top-right-radius: $br-huge;
   border-top-left-radius: $br-huge;
   flex: 1 0 0;
-  margin-right: $small;
+  margin-right: $medium;
   overflow-y: auto;
 
   &.search {
