--- a/frontend/resources/styles/main/partials/workspace-header.scss
+++ b/frontend/resources/styles/main/partials/workspace-header.scss
@@ -149,7 +149,7 @@
     li {
       cursor: pointer;
       font-size: $fs14;
-      padding: $small $x-small;
+      padding: $small;
       display: flex;
       justify-content: space-between;
 
